--- a/.gitignore
+++ b/.gitignore
@@ -11,22 +11,4 @@
 /build
 /captures
 .externalNativeBuild
-.cxx
-.gitignore
-build.gradle
-libs/
-proguard-rules.pro
-src/androidTest/
-src/main/AndroidManifest.xml
-src/main/java/br/com/beertime/view/BeerListActivity.kt
-src/main/res/drawable-v24/
-src/main/res/drawable/
-src/main/res/layout/activity_beer_list.xml
-src/main/res/mipmap-anydpi-v26/
-src/main/res/mipmap-hdpi/
-src/main/res/mipmap-mdpi/
-src/main/res/mipmap-xhdpi/
-src/main/res/mipmap-xxhdpi/
-src/main/res/mipmap-xxxhdpi/
-src/main/res/values/
-src/test/
+*.json
